TRFORMS-442. Fixing z-index when multiple cpr-multiselects on page, and closing pillbox when not clicked on (#130)

--- a/src/multi-selector.css
+++ b/src/multi-selector.css
@@ -2,11 +2,12 @@
 	display: inline-block;
 	position: relative;
 	font-size: 1.4rem;
-}
-
-.cpr-multi-selector {
 	width: 340px;
 	z-index: 1;
+}
+
+.cpr-multi-selector--active {
+	z-index: 8;
 }
 
 .cpr-multi-selector__hidden-input {
